asae-explore.css
/* ... */
#asae-eb-section svg {
    display: inline;
}
/* Focus indicators for keyboard navigation (WCAG 2.4.7) */
#asae-eb-left-nav:focus-visible {
    outline: 2px solid #bd491e;
    outline-offset: -2px;
}
#asae-eb-mag:focus-visible,
#asae-eb-chatbot:focus-visible,
#asae-eb-user:focus-visible {
    outline: 2px solid #bd491e;
    outline-offset: 2px;
}
.asae-eb-link-name a:focus-visible {
    outline: 2px solid #bd491e;
    outline-offset: 2px;
}
#asae-eb-showdesc-toggle:focus-visible {
    outline: 2px solid #bd491e;
    outline-offset: 2px;
}
#asae-eb-join-button:focus-visible {
    outline: 2px solid #000;
    outline-offset: 2px;
}
#asae-eb-row {
    display: flex;
    flex-wrap: nowrap;
    align-items: stretch;
    max-width: 1200px;
    margin: auto;
}
.asae-eb-break {
    flex-basis: 100%;
    width: 100%;
    height: 0;
    margin: 0;
}
#asae-eb-left {
    display: flex;
    flex: 1;
    min-width: 0;
    color: #fff;
    line-height: 1.5;
    font-weight: 600 !important;
}
#asae-eb-right {
    display: flex;
    flex-shrink: 0;
    justify-content: flex-end;
    align-items: center;
    color: #fff;
    font-size: 1em !important;
    font-weight: 600 !important;
}
#asae-eb-star {
    height: 1em;
    vertical-align: text-bottom;
    padding: 0 0 0.1em 0.5em;
}
#asae-eb-switcher {
    color: #fff;
    height: 22px;
    width: auto;
    vertical-align: text-bottom;
    padding: 0 0.5em 0 0.65em;
}
.asae-eb-switcher-icon {
    color: #fff;
}
.asae-eb-switcher-icon.active {
    color: #000;
}
#asae-eb-explore-asae {
    color: #fff;
    font-size: 0.85em;
    white-space: nowrap;
}
#asae-eb-explore-asae.active {
    color: #000;
}
#asae-eb-explore-asae::after {
    color: #fff;
    opacity: 75%;
    content: '\25BC';
    cursor: pointer;
    font-size: 0.6em;
    padding: 0 0 0 0.5em;
    vertical-align: middle;
}
#asae-eb-explore-asae.active::after {
    color: #000;
    opacity: 75%;
    content: '\25B2';
}
#asae-eb-left-nav {
    display: flex;
    align-items: center;
    padding: 0.5em 0.75em 0.5em 0.25em;
    cursor: pointer;
    background-color: #000;
}
#asae-eb-left-nav.active {
    background-color: #eeeeee;
}
#asae-eb-right-search {
    padding: 0.5em 0.4em;
    cursor: pointer;
}
#asae-eb-right-search.active {
    background-color: #eeeeee;
}
#asae-eb-placeholder {
    width: 2.2em;
    height: 2.2em;
}
.asae-eb-placeholder-rect {
    color: #000;
}
#asae-eb-mag {
    width: 2.2em;
    height: 2.2em;
}
.asae-eb-mag-icon {
    color: #fff;
}
.asae-eb-mag-icon.active {
    color: #000;
}
#asae-eb-right-chatbot {
    padding: 0.5em 0.4em;
    cursor: pointer;
}
#asae-eb-right-chatbot.active {
    background-color: #eeeeee;
}
#asae-eb-chatbot {
    width: 2.2em;
    height: 2.2em;
}
.asae-eb-chatbot-icon {
    color: #fff;
}
.asae-eb-chatbot-icon.active {
    color: #000;
}
#asae-eb-right-user {
    padding: 0.5em 0.4em;
    cursor: pointer;
}
#asae-eb-right-user.active {
    background-color: #eeeeee;
}
#asae-eb-user {
    width: 2.2em;
    height: 2.2em;
}
.asae-eb-user-icon {
    color: #fff;
}
.asae-eb-user-icon.active {
    color: #000;
}
#asae-eb-modals {
    background-color: #333;
    width: 100%;
}
.asae-eb-modal-shadow {
    width: 100%;
    height: 4px;
    margin: 0;
    background-color: #bd491e;
    position: relative;
}
/* NAV */
#asae-eb-modal-nav-container {
    visibility: hidden;
    max-width: 1200px;
    margin: auto;
    height: auto;
    max-height: 0px;
    overflow: hidden;
    transition: max-height 0.3s ease-in, visibility 0s 0.3s;
}
#asae-eb-modal-nav-container.active {
    visibility: visible;
    max-height: 55em;
    transition: max-height 0.4s ease-out, visibility 0s 0s;
}
#asae-eb-modal-nav {
    max-width: 1200px;
    float: left;
    display: flex;
    flex-flow: wrap;
    background-color: #eee;
    color: #000;
    text-align: left;
}
#asae-eb-showdesc {
    width: 100%;
    padding: 1em 1.25em 1em 1.25em;
    font-size: 0.75em;
    font-weight: 200;
    text-align: right;
    vertical-align: middle;
}
#asae-eb-showdesc a:link {
    border-bottom: 0px solid;
    color: #333;
}
#asae-eb-showdesc-toggle {
    margin: 0 0.75em;
}
#asae-eb-showdesc-toggle:before {
    content: 'Show Descriptions';
}
#asae-eb-showdesc-toggle.active:before {
    content: 'Hide Descriptions';
}
.asae-eb-link {
    display: flex;
    flex-flow: wrap;
    width: 100%;
    padding: 0.75em;
    border-top: 2px dotted #fff;
}
.asae-eb-link-name {
    width: 100%;
}
.asae-eb-link-name a:link {
    text-decoration: none;
    color: #000;
    border-bottom: 1px solid;
    border-color: #bd491e;
    font-size: 1em;
    line-height: 1.25em;
    font-weight: 600;
}
.asae-eb-link-desc {
    visibility: hidden;
    font-size: 0.75em;
    line-height: 2em;
    font-weight: 300;
    width: 100%;
    height: auto;
    max-height: 0px;
    overflow: hidden;
    transition: max-height 0.2s ease-in, visibility 0s 0.2s;
}
.asae-eb-link-desc.active {
    visibility: visible;
    max-height: 3em;
    transition: max-height 0.3s ease-out, visibility 0s 0s;
}

.asae-eb-reg-button {
    background-color: #bd491e !important;
    text-align: center;
    text-decoration: none !important;
    display: inline-block;
    font-size: 0.85em !important;
    text-transform: uppercase;
    line-height: 1.5em;
    color: #fff !important;
    font-weight: 600 !important;
    padding: 0.2em 1em 0.2em 1em;
}
.asae-eb-reg-button:hover {
    background-color: #fff !important;
    color: #bd491e !important;
    text-decoration: none !important;
}

#asae-eb-join-button {
    background-color: #bd491e;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 1em;
    text-transform: uppercase;
    line-height: 1.5em;
    color: #fff;
    font-weight: 700;
    padding: 0.2em 1em 0.2em 1em;
}
#asae-eb-join-button:hover {
    background-color: #fff;
    color: #bd491e;
}
a#asae-eb-join-button:visited {
    color: #fff;
}
a#asae-eb-join-button:hover {
    color: #bd491e;
}
/* ... */

